# Agentic-RAG-PoC

./: README.md  pyproject.toml
.github/workflows/: ci.yaml
notebooks/: agentic_rag.ipynb
