[project]
name = "agentic-rag-langgraph"
version = "1.0.0"
description = "Agentic RAG demo with LangGraph + Qwen3-4B-Thinking"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "langgraph>=0.1.0",
  "langchain>=0.2.0",
  "langchain-community>=0.2.0",
  "langchain-text-splitters>=0.2.0",
  "langchain-ollama>=0.2.0",
  "transformers>=4.43.0",
  "sentence-transformers>=3.0.0",
  "torch",
  "langchain-docling>=0.1.0",
  "faiss-cpu>=1.8.0",
  "numpy>=1.26.4",
  "ipywidgets>=8.1.3"
]

[tool.uv]
no-build-isolation = true